[project]
name = "gabox-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "sqlmodel>=0.0.38",
    "sqlalchemy>=2.0.50",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "alembic>=1.18.4",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]